# TvTimeToTrakt

./: .gitignore  Cargo.toml  README.md  config.json  main.py
lib/: Token_info.py  reader.py  syncer.py
src/: file_reader.rs  lib.rs  main.rs  media_objects.rs  trakt_handler.rs
