[package]
name = "tv_time_to_trakt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
chrono = "0.4.23"
csv = "1.2.1"
serde = {version = "1.0.155", features = ["derive"]}
serde_json = "1.0.94"
